--- a/style.css
+++ b/style.css
@@ -57,6 +57,66 @@ Main Color : #2568ef
 ** General Styles for HTML tags
 */
 
+.numbered-circle {
+  display: inline-flex; /* Use flexbox for better centering */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  border-radius: 50%;
+  text-align: center;
+  color: blue;
+  border: 2px solid blue;
+  background-color: #ffffff;
+  margin-right: 5px;
+}
+
+.progress-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 0;
+  list-style: none;
+}
+
+.progress-step {
+  flex-grow: 1;
+  text-align: center;
+}
+
+.step-circle {
+  width: 30px;
+  height: 30px;
+  line-height: 28px;
+  border-radius: 50%;
+  background-color: #ddd;
+  color: blue; /* Number color */
+  border: 2px solid blue; /* Circle outline */
+  display: inline-block;
+  text-align: center;
+  position: relative;
+}
+
+.step-circle.current {
+  background-color: blue;
+  color: white; /* Number color for the current step */
+}
+
+.step-text {
+  display: block;
+  margin-top: 5px;
+  font-size: 14px;
+}
+.special {
+  color: white;
+  background-color: blue;
+}
+
+@media (max-width: 768px) {
+  .custom-ol-padding {
+      padding-left: 20px; 
+  }
+}
 * {
   padding: 0;
   margin: 0;
