--- a/style.css
+++ b/style.css
@@ -56,7 +56,39 @@ Main Color : #2568ef
 /*
 ** General Styles for HTML tags
 */
+.years-experience-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
 
+.years-experience-button {
+  background-color: #fff;
+  color: #000;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  text-align: center;
+  margin-right: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add shadow */
+}
+
+.years-experience-circles {
+  display: flex;
+}
+
+.years-experience-circle {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #000;
+  margin-right: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Add shadow */
+}
 .numbered-circle {
   display: inline-flex; /* Use flexbox for better centering */
   justify-content: center; /* Center horizontally */
